--- a/scr/cgo3read_main.lfm
+++ b/scr/cgo3read_main.lfm
@@ -1,36 +1,36 @@
 object Form1: TForm1
-  Left = 1877
-  Height = 810
-  Top = 130
-  Width = 842
+  Left = 1824
+  Height = 836
+  Top = 135
+  Width = 844
   Caption = 'Form1'
-  ClientHeight = 810
-  ClientWidth = 842
-  Constraints.MinHeight = 580
-  Constraints.MinWidth = 640
+  ClientHeight = 836
+  ClientWidth = 844
+  Constraints.MinHeight = 620
+  Constraints.MinWidth = 840
   OnActivate = FormActivate
   OnClose = FormClose
   OnCreate = FormCreate
   Position = poDesktopCenter
-  SessionProperties = 'cbPort.Text;cbRecord.Checked;cbSpeed.ItemIndex;cbSpeed.Text;cbTelemetry.Checked;Height;Left;Top;Width;WindowState;PageControl.ActivePage'
+  SessionProperties = 'cbPort.Text;cbRecord.Checked;cbSpeed.ItemIndex;cbSpeed.Text;cbTelemetry.Checked;Height;Left;PageControl.ActivePage;Top;Width;WindowState;rgYGC_Type.ItemIndex'
   ShowHint = True
   LCLVersion = '3.7.0.0'
   object upperPanel: TPanel
     Left = 0
     Height = 98
     Top = 0
-    Width = 842
+    Width = 844
     Align = alTop
     ClientHeight = 98
-    ClientWidth = 842
+    ClientWidth = 844
     TabOrder = 0
     object cbPort: TComboBox
       Left = 16
-      Height = 28
+      Height = 25
       Hint = 'Select serial port'
       Top = 16
       Width = 152
-      ItemHeight = 0
+      ItemHeight = 17
       ItemIndex = 0
       Items.Strings = (
         '/dev/ttyUSB0'
@@ -44,11 +44,11 @@ object Form1: TForm1
     end
     object cbSpeed: TComboBox
       Left = 16
-      Height = 28
+      Height = 25
       Hint = 'Select baud rate'
       Top = 56
       Width = 152
-      ItemHeight = 0
+      ItemHeight = 17
       Items.Strings = (
         '4800'
         '9600'
@@ -71,7 +71,7 @@ object Form1: TForm1
       TabOrder = 2
     end
     object btnClose: TBitBtn
-      Left = 729
+      Left = 731
       Height = 30
       Top = 16
       Width = 99
@@ -89,9 +89,9 @@ object Form1: TForm1
     end
     object cbRecord: TCheckBox
       Left = 336
-      Height = 23
+      Height = 21
       Top = 16
-      Width = 182
+      Width = 175
       Caption = 'Record received messages'
       Checked = True
       State = cbChecked
@@ -100,9 +100,9 @@ object Form1: TForm1
   end
   object StatusBar1: TStatusBar
     Left = 0
-    Height = 18
-    Top = 792
-    Width = 842
+    Height = 23
+    Top = 813
+    Width = 844
     Panels = <    
       item
         Width = 150
@@ -117,17 +117,17 @@ object Form1: TForm1
   end
   object PageControl: TPageControl
     Left = 0
-    Height = 694
+    Height = 715
     Top = 98
-    Width = 842
-    ActivePage = tsFC
+    Width = 844
+    ActivePage = tsYGC
     Align = alClient
-    TabIndex = 0
+    TabIndex = 1
     TabOrder = 2
     object tsFC: TTabSheet
       Caption = 'As flight controller'
-      ClientHeight = 664
-      ClientWidth = 832
+      ClientHeight = 685
+      ClientWidth = 836
       object knPanControl: TmKnob
         Left = 208
         Height = 60
@@ -154,8 +154,8 @@ object Form1: TForm1
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 1
-        ClientHeight = 104
-        ClientWidth = 46
+        ClientHeight = 99
+        ClientWidth = 44
         ItemIndex = 0
         Items.Strings = (
           'F'
@@ -179,8 +179,8 @@ object Form1: TForm1
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 1
-        ClientHeight = 104
-        ClientWidth = 46
+        ClientHeight = 99
+        ClientWidth = 44
         ItemIndex = 0
         Items.Strings = (
           'A'
@@ -202,9 +202,9 @@ object Form1: TForm1
       end
       object lblPanControl: TLabel
         Left = 224
-        Height = 16
+        Height = 17
         Top = 16
-        Width = 32
+        Width = 28
         Caption = '2048'
       end
       object btnCenter: TButton
@@ -219,9 +219,9 @@ object Form1: TForm1
       end
       object cbTelemetry: TCheckBox
         Left = 8
-        Height = 23
+        Height = 21
         Top = 160
-        Width = 142
+        Width = 130
         Caption = 'Send test telemetry'
         TabOrder = 5
       end
@@ -229,7 +229,7 @@ object Form1: TForm1
         Left = 288
         Height = 207
         Top = 8
-        Width = 537
+        Width = 541
         AxisList = <        
           item
             Marks.LabelBrush.Style = bsClear
@@ -244,19 +244,19 @@ object Form1: TForm1
             Title.LabelBrush.Style = bsClear
           end>
         Title.Text.Strings = (
-          'Camera tilt'
+          'Tilt'
         )
         Title.Visible = True
         Anchors = [akTop, akLeft, akRight]
         object chTiltLineSeries1: TLineSeries
-          LinePen.Color = clFuchsia
+          LinePen.Color = clPurple
         end
       end
       object chPan: TChart
         Left = 288
         Height = 207
         Top = 224
-        Width = 537
+        Width = 541
         AxisList = <        
           item
             Marks.LabelBrush.Style = bsClear
@@ -276,14 +276,14 @@ object Form1: TForm1
         Title.Visible = True
         Anchors = [akTop, akLeft, akRight]
         object chPanLineSeries1: TLineSeries
-          LinePen.Color = clLime
+          LinePen.Color = clGreen
         end
       end
       object chRoll: TChart
         Left = 288
         Height = 207
         Top = 440
-        Width = 537
+        Width = 541
         AxisList = <        
           item
             Marks.LabelBrush.Style = bsClear
@@ -303,52 +303,72 @@ object Form1: TForm1
         Title.Visible = True
         Anchors = [akTop, akLeft, akRight]
         object chRollLineSeries1: TLineSeries
+          LinePen.Color = clNavy
         end
       end
       object lblGimbalVersion: TLabel
-        Left = 8
-        Height = 1
-        Top = 200
-        Width = 1
+        Left = 32
+        Height = 17
+        Top = 199
+        Width = 63
+        Caption = 'Gimbal FW'
       end
     end
     object tsYGC: TTabSheet
       Caption = 'As gimbal checker'
-      ClientHeight = 664
-      ClientWidth = 832
+      ClientHeight = 685
+      ClientWidth = 836
+      ImageIndex = 0
       object panelRight: TPanel
-        Left = 734
-        Height = 566
+        Left = 738
+        Height = 587
         Top = 98
         Width = 98
         Align = alRight
-        ClientHeight = 566
+        ClientHeight = 587
         ClientWidth = 98
         TabOrder = 0
         object btnVersion: TButton
-          Left = 8
+          Left = 0
           Height = 25
           Top = 16
-          Width = 83
-          Caption = 'Version'
+          Width = 91
+          Caption = 'SW versions'
           TabOrder = 0
           OnClick = btnVersionClick
+        end
+        object btnCommand: TButton
+          Left = 0
+          Height = 25
+          Top = 96
+          Width = 91
+          Caption = 'Command'
+          TabOrder = 1
+          OnClick = btnCommandClick
+        end
+        object edCommand: TEdit
+          Left = 0
+          Height = 25
+          Top = 72
+          Width = 91
+          TabOrder = 2
+          TextHint = 'YGC msg type'
         end
       end
       object panelYGCTop: TPanel
         Left = 0
         Height = 98
         Top = 0
-        Width = 832
+        Width = 836
         Align = alTop
         ClientHeight = 98
-        ClientWidth = 832
+        ClientWidth = 836
         TabOrder = 1
         object Memo1: TMemo
-          Left = 607
+          Left = 476
           Height = 96
           Top = 1
-          Width = 224
+          Width = 359
           Align = alRight
           Lines.Strings = (
             'Memo1'
@@ -356,20 +376,72 @@ object Form1: TForm1
           ScrollBars = ssAutoBoth
           TabOrder = 0
         end
+        object lblBootTime: TLabel
+          Left = 8
+          Height = 17
+          Top = 16
+          Width = 77
+          Caption = 'Boot time [s]:'
+        end
+        object lblGimbalBootTime: TLabel
+          Left = 128
+          Height = 17
+          Top = 16
+          Width = 110
+          Caption = 'lblGimbalBootTime'
+        end
       end
-      object gridLeft: TStringGrid
+      object gridStatus: TStringGrid
         Left = 8
-        Height = 549
+        Height = 570
         Top = 112
-        Width = 352
+        Width = 280
         Anchors = [akTop, akLeft, akBottom]
         ColCount = 2
-        FixedRows = 0
         TabOrder = 2
         ColWidths = (
-          231
+          178
           92
         )
+      end
+      object gridVarious: TStringGrid
+        Left = 296
+        Height = 570
+        Top = 112
+        Width = 272
+        Anchors = [akTop, akLeft, akBottom]
+        ColCount = 2
+        TabOrder = 3
+        ColWidths = (
+          172
+          92
+        )
+      end
+      object rgYGC_Type: TRadioGroup
+        Left = 568
+        Height = 137
+        Top = 112
+        Width = 160
+        AutoFill = True
+        Caption = 'Show message'
+        ChildSizing.LeftRightSpacing = 6
+        ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+        ChildSizing.EnlargeVertical = crsHomogenousChildResize
+        ChildSizing.ShrinkHorizontal = crsScaleChilds
+        ChildSizing.ShrinkVertical = crsScaleChilds
+        ChildSizing.Layout = cclLeftToRightThenTopToBottom
+        ChildSizing.ControlsPerLine = 1
+        ClientHeight = 115
+        ClientWidth = 156
+        ItemIndex = 0
+        Items.Strings = (
+          'GYRO_POWER'
+          'EULER_ANGLE'
+          'ACC'
+          'TEMP_DIFF'
+        )
+        OnClick = rgYGC_TypeClick
+        TabOrder = 4
       end
     end
   end
