--- a/scr/cgo3read_main.lfm
+++ b/scr/cgo3read_main.lfm
@@ -1,11 +1,11 @@
 object Form1: TForm1
   Left = 1824
-  Height = 836
+  Height = 655
   Top = 135
-  Width = 844
+  Width = 840
   Caption = 'Form1'
-  ClientHeight = 836
-  ClientWidth = 844
+  ClientHeight = 655
+  ClientWidth = 840
   Constraints.MinHeight = 620
   Constraints.MinWidth = 840
   OnActivate = FormActivate
@@ -19,18 +19,18 @@ object Form1: TForm1
     Left = 0
     Height = 98
     Top = 0
-    Width = 844
+    Width = 840
     Align = alTop
     ClientHeight = 98
-    ClientWidth = 844
+    ClientWidth = 840
     TabOrder = 0
     object cbPort: TComboBox
       Left = 16
-      Height = 25
+      Height = 28
       Hint = 'Select serial port'
       Top = 16
       Width = 152
-      ItemHeight = 17
+      ItemHeight = 0
       ItemIndex = 0
       Items.Strings = (
         '/dev/ttyUSB0'
@@ -44,11 +44,11 @@ object Form1: TForm1
     end
     object cbSpeed: TComboBox
       Left = 16
-      Height = 25
+      Height = 28
       Hint = 'Select baud rate'
       Top = 56
       Width = 152
-      ItemHeight = 17
+      ItemHeight = 0
       Items.Strings = (
         '4800'
         '9600'
@@ -71,7 +71,7 @@ object Form1: TForm1
       TabOrder = 2
     end
     object btnClose: TBitBtn
-      Left = 731
+      Left = 727
       Height = 30
       Top = 16
       Width = 99
@@ -89,9 +89,9 @@ object Form1: TForm1
     end
     object cbRecord: TCheckBox
       Left = 336
-      Height = 21
+      Height = 23
       Top = 16
-      Width = 175
+      Width = 182
       Caption = 'Record received messages'
       Checked = True
       State = cbChecked
@@ -100,9 +100,9 @@ object Form1: TForm1
   end
   object StatusBar1: TStatusBar
     Left = 0
-    Height = 23
-    Top = 813
-    Width = 844
+    Height = 18
+    Top = 637
+    Width = 840
     Panels = <    
       item
         Width = 150
@@ -117,17 +117,17 @@ object Form1: TForm1
   end
   object PageControl: TPageControl
     Left = 0
-    Height = 715
+    Height = 539
     Top = 98
-    Width = 844
+    Width = 840
     ActivePage = tsYGC
     Align = alClient
     TabIndex = 1
     TabOrder = 2
     object tsFC: TTabSheet
       Caption = 'As flight controller'
-      ClientHeight = 685
-      ClientWidth = 836
+      ClientHeight = 509
+      ClientWidth = 830
       object knPanControl: TmKnob
         Left = 208
         Height = 60
@@ -154,8 +154,8 @@ object Form1: TForm1
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 1
-        ClientHeight = 99
-        ClientWidth = 44
+        ClientHeight = 104
+        ClientWidth = 46
         ItemIndex = 0
         Items.Strings = (
           'F'
@@ -179,8 +179,8 @@ object Form1: TForm1
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 1
-        ClientHeight = 99
-        ClientWidth = 44
+        ClientHeight = 104
+        ClientWidth = 46
         ItemIndex = 0
         Items.Strings = (
           'A'
@@ -202,9 +202,9 @@ object Form1: TForm1
       end
       object lblPanControl: TLabel
         Left = 224
-        Height = 17
+        Height = 16
         Top = 16
-        Width = 28
+        Width = 32
         Caption = '2048'
       end
       object btnCenter: TButton
@@ -219,9 +219,9 @@ object Form1: TForm1
       end
       object cbTelemetry: TCheckBox
         Left = 8
-        Height = 21
+        Height = 23
         Top = 160
-        Width = 130
+        Width = 142
         Caption = 'Send test telemetry'
         TabOrder = 5
       end
@@ -229,7 +229,7 @@ object Form1: TForm1
         Left = 288
         Height = 207
         Top = 8
-        Width = 541
+        Width = 535
         AxisList = <        
           item
             Marks.LabelBrush.Style = bsClear
@@ -256,7 +256,7 @@ object Form1: TForm1
         Left = 288
         Height = 207
         Top = 224
-        Width = 541
+        Width = 535
         AxisList = <        
           item
             Marks.LabelBrush.Style = bsClear
@@ -283,7 +283,7 @@ object Form1: TForm1
         Left = 288
         Height = 207
         Top = 440
-        Width = 541
+        Width = 535
         AxisList = <        
           item
             Marks.LabelBrush.Style = bsClear
@@ -308,24 +308,24 @@ object Form1: TForm1
       end
       object lblGimbalVersion: TLabel
         Left = 32
-        Height = 17
+        Height = 16
         Top = 199
-        Width = 63
+        Width = 64
         Caption = 'Gimbal FW'
       end
     end
     object tsYGC: TTabSheet
       Caption = 'As gimbal checker'
-      ClientHeight = 685
-      ClientWidth = 836
+      ClientHeight = 509
+      ClientWidth = 830
       ImageIndex = 0
       object panelRight: TPanel
-        Left = 738
-        Height = 587
+        Left = 732
+        Height = 411
         Top = 98
         Width = 98
         Align = alRight
-        ClientHeight = 587
+        ClientHeight = 411
         ClientWidth = 98
         TabOrder = 0
         object btnVersion: TButton
@@ -348,7 +348,7 @@ object Form1: TForm1
         end
         object edCommand: TEdit
           Left = 0
-          Height = 25
+          Height = 28
           Top = 72
           Width = 91
           TabOrder = 2
@@ -359,13 +359,13 @@ object Form1: TForm1
         Left = 0
         Height = 98
         Top = 0
-        Width = 836
+        Width = 830
         Align = alTop
         ClientHeight = 98
-        ClientWidth = 836
+        ClientWidth = 830
         TabOrder = 1
         object Memo1: TMemo
-          Left = 476
+          Left = 470
           Height = 96
           Top = 1
           Width = 359
@@ -378,22 +378,22 @@ object Form1: TForm1
         end
         object lblBootTime: TLabel
           Left = 8
-          Height = 17
+          Height = 16
           Top = 16
-          Width = 77
+          Width = 78
           Caption = 'Boot time [s]:'
         end
         object lblGimbalBootTime: TLabel
           Left = 128
-          Height = 17
+          Height = 16
           Top = 16
-          Width = 110
+          Width = 115
           Caption = 'lblGimbalBootTime'
         end
       end
       object gridStatus: TStringGrid
         Left = 8
-        Height = 570
+        Height = 394
         Top = 112
         Width = 280
         Anchors = [akTop, akLeft, akBottom]
@@ -406,7 +406,7 @@ object Form1: TForm1
       end
       object gridVarious: TStringGrid
         Left = 296
-        Height = 570
+        Height = 394
         Top = 112
         Width = 272
         Anchors = [akTop, akLeft, akBottom]
@@ -431,8 +431,8 @@ object Form1: TForm1
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 1
-        ClientHeight = 115
-        ClientWidth = 156
+        ClientHeight = 120
+        ClientWidth = 158
         ItemIndex = 0
         Items.Strings = (
           'GYRO_POWER'
@@ -481,20 +481,30 @@ object Form1: TForm1
     Top = 376
   end
   object timerFCCommand: TTimer
+    Enabled = False
     Interval = 100
     OnTimer = timerFCCommandTimer
     Left = 40
     Top = 488
   end
   object timerTelemetry: TTimer
+    Enabled = False
     Interval = 600
     OnTimer = timerTelemetryTimer
     Left = 176
     Top = 488
   end
   object timerYGCHeartbeat: TTimer
+    Enabled = False
     OnTimer = timerYGCHeartbeatTimer
     Left = 40
     Top = 376
+  end
+  object timerYGCcommandLong: TTimer
+    Enabled = False
+    Interval = 999
+    OnTimer = timerYGCcommandLongTimer
+    Left = 40
+    Top = 576
   end
 end
