--- a/scr/cgo3read_main.lfm
+++ b/scr/cgo3read_main.lfm
@@ -26,11 +26,11 @@ object Form1: TForm1
     TabOrder = 0
     object cbPort: TComboBox
       Left = 16
-      Height = 25
+      Height = 28
       Hint = 'Select serial port'
       Top = 16
       Width = 152
-      ItemHeight = 17
+      ItemHeight = 0
       ItemIndex = 0
       Items.Strings = (
         '/dev/ttyUSB0'
@@ -44,11 +44,11 @@ object Form1: TForm1
     end
     object cbSpeed: TComboBox
       Left = 16
-      Height = 25
+      Height = 28
       Hint = 'Select baud rate'
       Top = 56
       Width = 152
-      ItemHeight = 17
+      ItemHeight = 0
       Items.Strings = (
         '4800'
         '9600'
@@ -89,9 +89,9 @@ object Form1: TForm1
     end
     object cbRecord: TCheckBox
       Left = 336
-      Height = 21
+      Height = 23
       Top = 16
-      Width = 175
+      Width = 182
       Caption = 'Record received messages'
       Checked = True
       State = cbChecked
@@ -100,8 +100,8 @@ object Form1: TForm1
   end
   object StatusBar1: TStatusBar
     Left = 0
-    Height = 23
-    Top = 632
+    Height = 18
+    Top = 637
     Width = 840
     Panels = <    
       item
@@ -117,7 +117,7 @@ object Form1: TForm1
   end
   object PageControl: TPageControl
     Left = 0
-    Height = 534
+    Height = 539
     Top = 98
     Width = 840
     ActivePage = tsYGC
@@ -126,8 +126,8 @@ object Form1: TForm1
     TabOrder = 2
     object tsFC: TTabSheet
       Caption = 'As flight controller'
-      ClientHeight = 504
-      ClientWidth = 832
+      ClientHeight = 509
+      ClientWidth = 830
       object knPanControl: TmKnob
         Left = 208
         Height = 60
@@ -154,8 +154,8 @@ object Form1: TForm1
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 1
-        ClientHeight = 99
-        ClientWidth = 44
+        ClientHeight = 104
+        ClientWidth = 46
         ItemIndex = 0
         Items.Strings = (
           'F'
@@ -179,8 +179,8 @@ object Form1: TForm1
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 1
-        ClientHeight = 99
-        ClientWidth = 44
+        ClientHeight = 104
+        ClientWidth = 46
         ItemIndex = 0
         Items.Strings = (
           'A'
@@ -202,9 +202,9 @@ object Form1: TForm1
       end
       object lblPanControl: TLabel
         Left = 224
-        Height = 17
+        Height = 16
         Top = 16
-        Width = 28
+        Width = 32
         Caption = '2048'
       end
       object btnCenter: TButton
@@ -219,9 +219,9 @@ object Form1: TForm1
       end
       object cbTelemetry: TCheckBox
         Left = 8
-        Height = 21
+        Height = 23
         Top = 160
-        Width = 130
+        Width = 142
         Caption = 'Send test telemetry'
         TabOrder = 5
       end
@@ -229,7 +229,7 @@ object Form1: TForm1
         Left = 288
         Height = 207
         Top = 8
-        Width = 537
+        Width = 535
         AxisList = <        
           item
             Marks.LabelBrush.Style = bsClear
@@ -256,7 +256,7 @@ object Form1: TForm1
         Left = 288
         Height = 207
         Top = 208
-        Width = 537
+        Width = 535
         AxisList = <        
           item
             Marks.LabelBrush.Style = bsClear
@@ -283,7 +283,7 @@ object Form1: TForm1
         Left = 288
         Height = 207
         Top = 416
-        Width = 537
+        Width = 535
         AxisList = <        
           item
             Marks.LabelBrush.Style = bsClear
@@ -308,28 +308,28 @@ object Form1: TForm1
       end
       object lblGimbalVersion: TLabel
         Left = 32
-        Height = 17
+        Height = 16
         Top = 199
-        Width = 63
+        Width = 64
         Caption = 'Gimbal FW'
       end
     end
     object tsYGC: TTabSheet
       Caption = 'As gimbal checker'
-      ClientHeight = 504
-      ClientWidth = 832
+      ClientHeight = 509
+      ClientWidth = 830
       ImageIndex = 0
       object panelRight: TPanel
-        Left = 712
-        Height = 406
+        Left = 704
+        Height = 411
         Top = 98
-        Width = 120
+        Width = 126
         Align = alRight
-        ClientHeight = 406
-        ClientWidth = 120
+        ClientHeight = 411
+        ClientWidth = 126
         TabOrder = 0
         object btnFrontErs: TButton
-          Left = 0
+          Left = 8
           Height = 25
           Top = 112
           Width = 107
@@ -338,7 +338,7 @@ object Form1: TForm1
           OnClick = btnFrontErsClick
         end
         object btnPreFrontCali: TButton
-          Left = 0
+          Left = 8
           Height = 25
           Top = 200
           Width = 107
@@ -348,17 +348,16 @@ object Form1: TForm1
           OnClick = btnPreFrontCaliClick
         end
         object btnYawEncCali: TButton
-          Left = 0
+          Left = 8
           Height = 25
           Top = 168
           Width = 107
           Caption = 'YawEncCali'
-          Enabled = False
           TabOrder = 2
           OnClick = btnYawEncCaliClick
         end
         object btnYawEncErs: TButton
-          Left = 0
+          Left = 8
           Height = 25
           Top = 16
           Width = 107
@@ -367,7 +366,7 @@ object Form1: TForm1
           OnClick = btnYawEncErsClick
         end
         object btnZeroPhaseErs: TButton
-          Left = 0
+          Left = 8
           Height = 25
           Top = 48
           Width = 107
@@ -376,7 +375,7 @@ object Form1: TForm1
           OnClick = btnZeroPhaseErsClick
         end
         object btnAccErase: TButton
-          Left = 0
+          Left = 8
           Height = 25
           Top = 80
           Width = 107
@@ -385,7 +384,7 @@ object Form1: TForm1
           OnClick = btnAccEraseClick
         end
         object btnZeroPhaseCali: TButton
-          Left = 0
+          Left = 8
           Height = 25
           Top = 232
           Width = 107
@@ -396,14 +395,14 @@ object Form1: TForm1
           OnClick = btnZeroPhaseCaliClick
         end
         object lblPowerCycle: TLabel
-          Left = 0
-          Height = 17
+          Left = 8
+          Height = 16
           Top = 271
-          Width = 96
+          Width = 97
           Caption = 'Power cycle cam'
         end
         object btnAccCali: TButton
-          Left = 0
+          Left = 8
           Height = 25
           Top = 304
           Width = 107
@@ -418,16 +417,16 @@ object Form1: TForm1
         Left = 0
         Height = 98
         Top = 0
-        Width = 832
+        Width = 830
         Align = alTop
         ClientHeight = 98
-        ClientWidth = 832
+        ClientWidth = 830
         TabOrder = 1
         object Memo1: TMemo
-          Left = 416
+          Left = 432
           Height = 96
           Top = 1
-          Width = 415
+          Width = 397
           Align = alRight
           Lines.Strings = (
             'Memo1'
@@ -437,31 +436,56 @@ object Form1: TForm1
         end
         object lblBootTime: TLabel
           Left = 8
-          Height = 17
-          Top = 16
-          Width = 77
+          Height = 16
+          Top = 8
+          Width = 78
           Caption = 'Boot time [s]:'
         end
         object lblGimbalBootTime: TLabel
           Left = 128
-          Height = 17
-          Top = 16
-          Width = 110
-          Caption = 'lblGimbalBootTime'
+          Height = 16
+          Top = 8
+          Width = 71
+          Caption = 'Time stamp'
         end
         object btnVersion: TButton
-          Left = 296
+          Left = 320
           Height = 25
           Top = 8
-          Width = 107
+          Width = 99
+          Anchors = [akTop, akRight]
           Caption = 'SW versions'
           TabOrder = 1
           OnClick = btnVersionClick
         end
+        object cbExpert: TCheckBox
+          Left = 8
+          Height = 23
+          Hint = 'Expert mode (not recommended). It allows irregular action that annot be undo.'
+          Top = 56
+          Width = 227
+          Caption = 'Expert mode (not recommended)'
+          TabOrder = 2
+          OnChange = cbExpertChange
+        end
+        object lblSerialNo: TLabel
+          Left = 8
+          Height = 16
+          Top = 32
+          Width = 86
+          Caption = 'Serial number:'
+        end
+        object lblSerial: TLabel
+          Left = 128
+          Height = 16
+          Top = 32
+          Width = 95
+          Caption = 'Gimbal serial no'
+        end
       end
       object gridStatus: TStringGrid
         Left = 8
-        Height = 389
+        Height = 394
         Top = 112
         Width = 280
         Anchors = [akTop, akLeft, akBottom]
@@ -474,7 +498,7 @@ object Form1: TForm1
       end
       object gridVarious: TStringGrid
         Left = 296
-        Height = 389
+        Height = 394
         Top = 112
         Width = 272
         Anchors = [akTop, akLeft, akBottom]
@@ -487,11 +511,11 @@ object Form1: TForm1
       end
       object rgYGC_Type: TRadioGroup
         Left = 568
-        Height = 137
+        Height = 168
         Top = 112
         Width = 128
         AutoFill = True
-        Caption = 'Show message'
+        Caption = 'Show 2nd message'
         ChildSizing.LeftRightSpacing = 6
         ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
         ChildSizing.EnlargeVertical = crsHomogenousChildResize
@@ -499,14 +523,15 @@ object Form1: TForm1
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 1
-        ClientHeight = 115
-        ClientWidth = 124
+        ClientHeight = 151
+        ClientWidth = 126
         ItemIndex = 0
         Items.Strings = (
           'GYRO_POWER'
           'EULER_ANGLE'
           'ACC'
           'TEMP_DIFF'
+          'Channel_data'
         )
         OnClick = rgYGC_TypeClick
         TabOrder = 4
