--- a/scr/cgo3read_main.lfm
+++ b/scr/cgo3read_main.lfm
@@ -1,10 +1,10 @@
 object Form1: TForm1
   Left = 1834
-  Height = 655
+  Height = 654
   Top = 136
   Width = 840
   Caption = 'Form1'
-  ClientHeight = 655
+  ClientHeight = 654
   ClientWidth = 840
   Constraints.MinHeight = 620
   Constraints.MinWidth = 840
@@ -34,7 +34,9 @@ object Form1: TForm1
       ItemIndex = 0
       Items.Strings = (
         '/dev/ttyUSB0'
+        '/dev/ttyUSB1'
         '/dev/ttyAMA0'
+        '/dev/ttyAMA1'
         '/dev/ttyACM0'
       )
       TabOrder = 0
@@ -101,7 +103,7 @@ object Form1: TForm1
   object StatusBar1: TStatusBar
     Left = 0
     Height = 18
-    Top = 637
+    Top = 636
     Width = 840
     Panels = <    
       item
@@ -117,7 +119,7 @@ object Form1: TForm1
   end
   object PageControl: TPageControl
     Left = 0
-    Height = 539
+    Height = 538
     Top = 98
     Width = 840
     ActivePage = tsYGC
@@ -126,7 +128,7 @@ object Form1: TForm1
     TabOrder = 2
     object tsFC: TTabSheet
       Caption = 'As flight controller'
-      ClientHeight = 509
+      ClientHeight = 508
       ClientWidth = 830
       object knPanControl: TmKnob
         Left = 208
@@ -316,17 +318,21 @@ object Form1: TForm1
     end
     object tsYGC: TTabSheet
       Caption = 'As gimbal checker'
-      ClientHeight = 509
+      ClientHeight = 508
       ClientWidth = 830
       ImageIndex = 0
       object panelRight: TPanel
         Left = 704
-        Height = 411
+        Height = 410
         Top = 98
         Width = 126
         Align = alRight
-        ClientHeight = 411
+        BevelColor = clRed
+        BevelWidth = 2
+        ClientHeight = 410
         ClientWidth = 126
+        ParentBackground = False
+        ParentColor = False
         TabOrder = 0
         object btnFrontErs: TButton
           Left = 8
@@ -437,55 +443,46 @@ object Form1: TForm1
         object lblBootTime: TLabel
           Left = 8
           Height = 16
-          Top = 8
+          Top = 40
           Width = 78
           Caption = 'Boot time [s]:'
         end
         object lblGimbalBootTime: TLabel
           Left = 128
           Height = 16
-          Top = 8
+          Top = 40
           Width = 71
           Caption = 'Time stamp'
-        end
-        object btnVersion: TButton
-          Left = 320
-          Height = 25
-          Top = 8
-          Width = 99
-          Anchors = [akTop, akRight]
-          Caption = 'SW versions'
-          TabOrder = 1
-          OnClick = btnVersionClick
-        end
-        object cbExpert: TCheckBox
-          Left = 8
-          Height = 23
-          Hint = 'Expert mode (not recommended). It allows irregular action that annot be undo.'
-          Top = 56
-          Width = 227
-          Caption = 'Expert mode (not recommended)'
-          TabOrder = 2
-          OnChange = cbExpertChange
         end
         object lblSerialNo: TLabel
           Left = 8
           Height = 16
-          Top = 32
+          Top = 64
           Width = 86
           Caption = 'Serial number:'
         end
         object lblSerial: TLabel
           Left = 128
           Height = 16
-          Top = 32
+          Top = 64
           Width = 95
           Caption = 'Gimbal serial no'
+        end
+        object lblWarning: TLabel
+          Left = 8
+          Height = 19
+          Top = 8
+          Width = 360
+          Caption = 'No warranty. You use this tool on your own risk!'
+          Font.Color = clRed
+          Font.Height = -16
+          Font.Style = [fsBold]
+          ParentFont = False
         end
       end
       object gridStatus: TStringGrid
         Left = 8
-        Height = 394
+        Height = 393
         Top = 112
         Width = 280
         Anchors = [akTop, akLeft, akBottom]
@@ -498,7 +495,7 @@ object Form1: TForm1
       end
       object gridVarious: TStringGrid
         Left = 296
-        Height = 394
+        Height = 393
         Top = 112
         Width = 272
         Anchors = [akTop, akLeft, akBottom]
@@ -535,6 +532,15 @@ object Form1: TForm1
         )
         OnClick = rgYGC_TypeClick
         TabOrder = 4
+      end
+      object btnVersion: TButton
+        Left = 582
+        Height = 25
+        Top = 300
+        Width = 99
+        Caption = 'SW versions'
+        TabOrder = 5
+        OnClick = btnVersionClick
       end
     end
   end
